# hello_petsc

./: .gitignore  README.md
with_cmake/: CMakeLists.txt  hellopetsc.c
with_makefile/: Makefile
